Fix #117586: Cycles: World Lightgroup not updated when creating/deleting LGs